# Auto-Correct-ish

./: CMakeLists.txt
src/: FileReader.cpp  FileReader.h  Word.cpp  Word.h  WordSort.cpp  WordSort.h  main.cpp
